# Test

./: CMakeLists.txt  Makefile  README.md
Tests/: test.cpp
src/: Solver.cpp  Solver.h
